-- 
-- NEWS
-- 
-- Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
-- 
-- This is free software; you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation; either version 2, or (at your option)
-- any later version.
-- 
-- This software is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
-- 
-- You should have received a copy of the GNU General Public License
-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-- Boston, MA 02111-1307, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.3
-------------

 * N- and P-channel JFET implementation (Shichman and Hodges model)
 * resistors with R=0 possible in DC analysis

Version 0.0.2
-------------

 * partly documented the know-how implemented in the simulator
 * DC dependent s-parameter analysis of diode possible
 * Qucs available under MacOS 10.3
 * implemented equation solver
 * multi-dimensional parameter sweeps
 * DC simulation for passive elements and controlled sources
 * implemented s-parameters of DC and AC components
 * support for arbitrary port impedances

Version 0.0.1
-------------

 * first available version