@@ -23,9 +23,10 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
-- parameter for exporting equation result to dataset
+- Allow subcircuits in netlist and simulate them correctly.
+	- Parameter for exporting equation result to dataset.
 	- What about resistors with R=0?
-- Implement DC model for phaseshifter.
+	- Implement DC model for phaseshifter.
 	- Implement DC model for bias T.
 	- Handle special DC models for dc-block, dc-feed, inductor and
 	  capacitor.
