@@ -26,6 +26,12 @@ files.
 Version 0.0.3
 -------------
 
+ * much more documentation
+ * microstrip models diffentiate between quasi-static and dispersion
+ * equation results can be selected for dataset export
+ * DC simulation can output operating points of nonlinear devices
+ * DC model for phase shifter implemented
+ * logarithmic sweeps possible
  * N- and P-channel JFET implementation (Shichman and Hodges model)
  * resistors with R=0 possible in DC analysis
 
